Fri Feb  4 12:11:51 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* string.c (str_utf8_nth): fixed a conditon of optimized lead
	  byte counting. [Bug #4366][ruby-dev:43170]

Fri Feb  4 00:14:55 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_reader_get_unused): no need to dup
	  before rb_str_resurrect.

Thu Feb  3 18:33:26 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	e ext/zlib/zlib.c (gzfile_reader_get_unused): use rb_str_resurrect
	  because gz->z.input is hidden string. [ruby-core:35057]

Thu Feb  3 07:02:16 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: ARG_ENCODING_NONE regular
	  expressions can round trip. [ruby-core:34969]

	* test/psych/test_yaml.rb: test for ARG_ENCODING_NONE regex

	* ext/sych/lib/syck/rubytypes.rb: ARG_ENCODING_NONE regular
	  expressions can round trip.

	* test/syck/test_yaml.rb: test for ARG_ENCODING_NONE regex

Mon Jan 31 21:32:44 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* thread.c (thread_start_func_2): check deadlock condition before
	  release thread stack. fix memory violation when deadlock detected.
	  reported by Max Aller. [Bug #4009] [ruby-core:32982]

Mon Jan 31 14:45:47 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/irb/locale.rb (IRB::Locale::#search_file):
	  Gem might be undefined if --disable-gems. [ruby-core:34990]

Mon Jan 31 04:45:12 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* array.c (rb_ary_uniq_bang): call ARY_SET_LEN(ary, 0) before
	  rb_resize_capa because rb_resize_capa expects resized length is
	  smaller than current array length. call rb_ary_unshare before
	  rb_resize_capa because rb_resize_capa losts the reference to
	  original shared array. [ruby-core:34997]

Sun Jan 30 16:15:20 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/dl/test_dl2.rb (TestDL#test_sin): math functions do not
	  work on x86_64 due to the design of DL2.

	* test/dl/test_func.rb (DL::TestFunc#test_{sinf,sin): ditto.
